import org.openapitools.generator.gradle.plugin.tasks.GenerateTask

plugins {
    id 'java'
    id 'org.springframework.boot' version '4.1.0'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.openapi.generator' version '7.23.0'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'shiftplanner_server'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // === Spring Boot Starters ===
    implementation "org.springframework.boot:spring-boot-starter"
    implementation "org.springframework.boot:spring-boot-starter-web"
    implementation "org.springframework.boot:spring-boot-starter-validation"
    implementation "org.springframework.boot:spring-boot-starter-security"

    // === Database & Persistence ===
    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
    implementation("org.springframework.boot:spring-boot-starter-flyway")
    implementation("org.flywaydb:flyway-database-postgresql")
    runtimeOnly "org.postgresql:postgresql"

    // === Lombok (Compile & Annotation Processing) ===
    compileOnly "org.projectlombok:lombok"
    annotationProcessor "org.projectlombok:lombok"

    // === OpenAPI & Code Generation Utilities ===
    implementation "io.swagger.core.v3:swagger-annotations-jakarta:2.2.30"
    implementation "org.openapitools:jackson-databind-nullable:0.2.6"
    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9"

    // === Testing Frameworks ===
    testImplementation "org.springframework.boot:spring-boot-starter-test"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher"

    // === Test-Specific Lombok ===
    testCompileOnly "org.projectlombok:lombok"
    testAnnotationProcessor "org.projectlombok:lombok"

    // === Testcontainers (Database Integration Tests) ===
    testImplementation "org.testcontainers:junit-jupiter:1.21.3"
    testImplementation "org.testcontainers:jdbc:1.21.3"
    testImplementation "org.testcontainers:postgresql:1.21.3"
}


def openApiSpec = "$projectDir/src/main/resources/static/openapi.yaml"
def openApiOutputRoot = layout.buildDirectory.dir('generated/openapi').get().asFile.absolutePath

tasks.withType(GenerateTask).configureEach {
    generateApiDocumentation.set(false)
    generateApiTests.set(false)
    generateModelDocumentation.set(false)
    generateModelTests.set(false)
}

openApiGenerate {
    generatorName.set('spring')
    inputSpec = openApiSpec
    outputDir = "$openApiOutputRoot/server"
    apiPackage.set('com.example.shiftplanner_server.api')
    modelPackage.set('com.example.shiftplanner_server.model')
    invokerPackage.set('com.example.shiftplanner_server.invoker')
    configOptions.set([
            interfaceOnly: 'true',
            useJakartaEE : 'true'
    ])
    globalProperties.set([
            apis           : '',
            models         : '',
            supportingFiles: 'ApiUtil.java'
    ])
}

tasks.register('generateOpenApiClient', GenerateTask) {
    generatorName.set('java')
    inputSpec = openApiSpec
    outputDir = "$openApiOutputRoot/client"
    apiPackage.set('com.example.shiftplanner_server.client.api')
    modelPackage.set('com.example.shiftplanner_server.client.model')
    invokerPackage.set('com.example.shiftplanner_server.client.invoker')
    library.set('webclient')
    configOptions.set([
            dateLibrary            : 'java8',
            useJakartaEe           : 'true',
            hideGenerationTimestamp: 'true'
    ])
    globalProperties.set([
            apis           : '',
            models         : '',
            supportingFiles: 'ApiClient.java,Configuration.java,RFC3339DateFormat.java,ServerConfiguration.java,ServerVariable.java'
    ])
}

tasks.register('generateOpenApi') {
    group = 'openapi tools'
    description = 'Generate server and client code from src/main/resources/static/openapi.yaml'
    dependsOn 'openApiGenerate', 'generateOpenApiClient'
}

sourceSets {
    main {
        java {
            srcDir "$openApiOutputRoot/server/src/main/java"
        }
    }
}

tasks.named('compileJava') {
    dependsOn 'openApiGenerate'
}

tasks.named('test') {
    useJUnitPlatform()
}
